<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.manuboncha.appcontactos.MainActivity">


    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/app_hint_et_nombre"
        android:ems="1"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/et_fecha_nacimiento"
            android:hint="@string/app_hint_et_fech_nacimiento"/>

        <ImageButton
            android:id="@+id/ib_btn_calendario"
            android:layout_width="93dp"
            android:layout_height="49dp"
            android:contentDescription="@string/app_btn_descript_cal_naci"
            android:cropToPadding="true"
            android:src="@drawable/calendario1"
            android:scaleType="center"/>

    </LinearLayout>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/et_tel"
        android:hint="@string/app_hint_et_tel"
        android:layout_weight="1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/et_mail"
        android:hint="@string/app_hint_et_mail"
        android:layout_weight="1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/et_descripcion"
        android:hint="@string/app_hint_et_descript"
        android:layout_weight="1" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_btn_sig"
        android:id="@+id/btn_siguiente"
        android:theme="@style/st_btn_raised"/>
</LinearLayout>
